[metadata]
name = runpod
version = 1.1.3
description = ðŸ | Python library for RunPod API and serverless worker SDK.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = runpod, ai, gpu, serverless, SDK, API, python, library
url = https://github.com/runpod/runpod-python
project_urls =
    Bug Tracker = https://github.com/runpod/runpod-python/issues
author = RunPod
author_email = support@runpod.io
license = MIT
classifiers =
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >= 3.9
install_requires =
    requests >= 2.31.0
